--- a/src/main/resources/templates/bbs/updated.html
+++ b/src/main/resources/templates/bbs/updated.html
@@ -8,7 +8,7 @@
 </th:block>
 
 <div layout:fragment="content" id="bbs">
-	<form action="/updated_ok" method="post" name="myForm" enctype="multipart/form-data">
+	<form action="/updated_ok" method="post" name="myForm">
 		<div id="bbsCreated">
 
 			<div class="bbsCreated_bottomLine">
