--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<div th:fragment = "header" class="header">
+		<a href="./list">
 		<img alt="헤더이미지" src="img/trip.jpg" width="169">
+		</a>
 	</div>
 </html>
