--- a/src/main/resources/templates/bbs/created.html
+++ b/src/main/resources/templates/bbs/created.html
@@ -8,7 +8,7 @@
 </th:block>
 
 	<div layout:fragment="content" id="bbs">
-		<form action="/created" method="post" name="myForm" enctype="multipart/form-data">
+		<form action="/created" method="post" name="myForm" >
 			<div id="bbsCreated">
 
 				<div class="bbsCreated_bottomLine">
