--- a/src/main/resources/templates/bbs/list.html
+++ b/src/main/resources/templates/bbs/list.html
@@ -5,6 +5,7 @@
 
 <th:block layout:fragment="css">
 	<link rel="stylesheet" type="text/css" href="css/list.css" />
+
 </th:block>
 
 <div layout:fragment="content" id="bbsList">
@@ -20,61 +21,33 @@
 			</form>
 		</div>
 		<div id="rightHeader">
-			<input type="button" value=" 질문하기 " class="btn2"
+			<input type="button" value=" 작성하기 " class="btn2"
 				onclick="javascript:location.href='/created';" />
 		</div>
 	</div>
 
-
-
 	<div id="bbsList_list">
-		<table>
-			<thead id="title">
-				<tr>
-					<th class="num">번호</th>
-					<th class="subject">제목</th>
-					<th class="name">작성자</th>
-					<th class="created">작성일</th>
-					<th class="hitCount">조회수</th>
-				</tr>
-			</thead>
+		<table id="list_table">
 			<tbody id="lists">
-				<!-- for(Board board : lists) -->
-				<tr th:if="${#lists.size(lists)} > 0" th:each="trip:${lists}">
-					<td class="num" th:text="${trip.num}"></td>
-					<td class="subject"><a
-						th:href="|@{${articleUrl}}&num=@{${trip.num}}|"
-						th:text="${trip.subject}"></a></td>
-					<td class="name" th:text="${trip.name}"></td>
-					<td class="created" th:text="${trip.created}"></td>
-					<td class="hitCount" th:text="${trip.hitCount}"></td>
-				</tr>
-				
-				<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-					<div class="col">
-						<div class="card shadow-sm">
-							<svg class="bd-placeholder-img card-img-top" width="100%"
-								height="225" xmlns="http://www.w3.org/2000/svg" role="img"
-								aria-label="Placeholder: Thumbnail"
-								preserveAspectRatio="xMidYMid slice" focusable="false">
-								<title>Placeholder</title><rect width="100%" height="100%"
-									fill="#55595c" />
-								<text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-							<div class="card-body">
-								<p class="card-text">This is a wider card with supporting
-									text below as a natural lead-in to additional content. This
-									content is a little bit longer.</p>
-								<div class="d-flex justify-content-between align-items-center">
-									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+				<div id="lists_box" th:if="${#lists.size(lists)} > 0" th:each="trip:${lists}">
+					<a class="card_box" th:href="|@{${articleUrl}}&num=@{${trip.num}}|">
+						<div id="row_box">
+							<div class="">
+								<div class="card shadow-sm">
+									<img id="card_img" th:src="@{${trip.img}}">
+									<div class="card-body">
+										<p class="card-text" th:text="${trip.subject}"></p>
+										<div class="d-flex justify-content-between align-items-center">
+											<small class="text-body-secondary" th:text="${trip.created}"></small>
+											<small class="text-body-secondary" style="text-align: right;" th:text="${trip.name}"></small>
+										</div>
 									</div>
-									<small class="text-body-secondary">9 mins</small>
 								</div>
 							</div>
 						</div>
-					</div>
-					
+					</a>
+				</div>
+
 				<tr th:if="${#lists.size(dataCount)} > 0">
 					<td colspan="5" id="footer"><a th:utext="${pageIndexList}"></a>
 					</td>
