--- a/src/main/resources/templates/bbs/article.html
+++ b/src/main/resources/templates/bbs/article.html
@@ -19,8 +19,8 @@
 			<dl>
 				<dt>작성자</dt>
 				<dd th:text="${trip.name}"></dd>
-				<dt>줄수</dt>
-				<dd th:text="${lineSu}"></dd>
+				<dt>주소</dt>
+				<dd th:text="${trip.address}"></dd>
 			</dl>
 		</div>
 
