--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -1,7 +1,7 @@
 @CHARSET "UTF-8";
 
 #bbsList {
-	width:800px;
+	width:1200px;
 	margin:0 auto;
 	text-align:left;
 }
@@ -50,18 +50,19 @@
 	font-size:9pt;
 }
 
+
 #bbsList_list {
 	clear:both;
 	width: 900px;
 	display: flex;
 }
 
-#list_table{
+#list_head{
 	display: flex;
 }
 
-#lists{
-	
+#list_table{
+	display: flex;
 }
 
 #lists_box{
@@ -72,6 +73,21 @@
 	justify-content: center;
 	margin-right: 15px;
 }
+
+#lists{
+	
+	display: inline;
+}
+
+#lists_count{
+	width: 100%;
+	height: 300px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 
 .card_box{
 	margin: 15px;
